processed/jira/txt/LU/LU-9832.txt
Key:        LU-9832
Summary:    minor()/major()/makedev() maro use problems with newer gcc
Link:       https://jira.whamcloud.com/browse/LU-9832
Type:       Bug
Priority:   Minor
Status:     Resolved
Resolution: Fixed
Assignee:   WC Triage
Reporter:   Oleg Drokin
Created:    Fri, 4 Aug 2017 18:17:16 +0000
Updated:    Thu, 13 Sep 2018 18:33:27 +0000
Resolved:   Thu, 17 Aug 2017 04:36:25 +0000

--- Description ---
building Lustre tools on Fedora 26 I am getting this warning now:

mcreate.c:82:13: error: In the GNU C Library, "minor" is defined
 by . For historical compatibility, it is
 currently defined by  as well, but we plan to
 remove this soon. To use "minor", include 
 directly. If you did not intend to use a system-defined macro
 "minor", you should undefine it after including . [-Werror]
                         dev = makedev(strtoul(optarg, NULL, 0), minor(dev));
             ^           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~                                                                                                                                                                                               mcreate.c:82:13: error: In the GNU C Library, "makedev" is defined
 by . For historical compatibility, it is
 currently defined by  as well, but we plan to
 remove this soon. To use "makedev", include 
 directly. If you did not intend to use a system-defined macro
 "makedev", you should undefine it after including . [-Werror]
                         dev = makedev(strtoul(optarg, NULL, 0), minor(dev));
             ^           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~                                                                                                                                                                                               mcreate.c:85:13: error: In the GNU C Library, "major" is defined
 by . For historical compatibility, it is
 currently defined by  as well, but we plan to
 remove this soon. To use "major", include 
 directly. If you did not intend to use a system-defined macro
 "major", you should undefine it after including . [-Werror]
                         dev = makedev(major(dev), strtoul(optarg, NULL, 0));
             ^           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

--- Comment (gerrit, Thu, 13 Sep 2018 18:33:27 +0000) ---
Minh Diep (mdiep@whamcloud.com) uploaded a new patch: https://review.whamcloud.com/33161

Subject: LU-9832 tests: Use sys/sysmacros.h for major/minor/makedev

Project: fs/lustre-release

Branch: b2_10

Current Patch Set: 1

Commit: 02b50a67351e54a7f4563f27363601c2d1cea341

--- Comment (pjones, Thu, 17 Aug 2017 04:36:25 +0000) ---
Landed for 2.11

--- Comment (gerrit, Thu, 17 Aug 2017 01:30:36 +0000) ---
Oleg Drokin (oleg.drokin@intel.com) merged in patch https://review.whamcloud.com/28360/

Subject: LU-9832 tests: Use sys/sysmacros.h for major/minor/makedev

Project: fs/lustre-release

Branch: master

Current Patch Set: 

Commit: 650b7450b612943e7ade76434c3be70b06f58f58

--- Comment (gerrit, Fri, 4 Aug 2017 18:19:20 +0000) ---
Oleg Drokin (oleg.drokin@intel.com) uploaded a new patch: https://review.whamcloud.com/28360

Subject: LU-9832 tests: Use sys/sysmacros.h for major/minor/makedev

Project: fs/lustre-release

Branch: master

Current Patch Set: 1

Commit: fc59e7db2aa02874c64e27de02402a47592846b8
